--- a/index.ipynb
+++ b/index.ipynb
@@ -45,12 +45,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Animal(object):\n",
-    "    pass"
+    "        \n",
+    "        def __init__(self,name,weight):\n",
+    "            self.name=name\n",
+    "            self.weight=weight\n",
+    "            self.species=None\n",
+    "            self.food_type=None\n",
+    "            self.nocturnal=False\n",
+    "            self.size=None\n",
+    "    \n",
+    "    \n",
+    "        def sleep(object):\n",
+    "            if self.nocturnal:\n",
+    "                print (\"this {} sleeps during the day!\".format(self.name))\n",
+    "            else: \n",
+    "                print (\"this {} sleeps at night!\".format(self.name))\n",
+    "        \n",
+    "        \n",
+    "        def eat(self, meal):\n",
+    "            if self.food_type=='herbivore':\n",
+    "                if meal=='plants':\n",
+    "                    print (\"{} the {} thinks {} is yummy!\".format(self.name,self.species,meal))\n",
+    "                else: \n",
+    "                    print (\"I don't eat this!\")\n",
+    "            elif self.food_type=='carnivore':\n",
+    "                if meal=='meat':\n",
+    "                    print (\"{} the {} thinks {} is yummy!\".format(self.name,self.species,meal))\n",
+    "                else: \n",
+    "                    print (\"I don't eat this!\")\n",
+    "            elif self.food_type=='omnivore':\n",
+    "                print (\"{} the {} thinks {} is yummy!\".format(self.name,self.species,meal))  "
    ]
   },
   {
@@ -72,12 +101,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Elephant(Animal):\n",
-    "    pass"
+    "    def __init__(self, name, weight):\n",
+    "        super().__init__(name, weight)\n",
+    "        self.species='elephant'\n",
+    "        self.size='enormous'\n",
+    "        self.food_type='herbivore'\n",
+    "        self.nocturnal=False"
    ]
   },
   {
@@ -95,12 +129,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Tiger(Animal):\n",
-    "    pass"
+    "    def __init__(self, name, weight):\n",
+    "        super().__init__(name, weight)\n",
+    "        self.species='tiger'\n",
+    "        self.size='large'\n",
+    "        self.food_type='carnivore'\n",
+    "        self.nocturnal=True"
    ]
   },
   {
@@ -118,12 +157,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Raccoon(Animal):\n",
-    "    pass"
+    "    def __init__(self, name, weight):\n",
+    "        super().__init__(name, weight)\n",
+    "        self.species='raccoon'\n",
+    "        self.size='small'\n",
+    "        self.food_type='omnivore'\n",
+    "        self.nocturnal=True"
    ]
   },
   {
@@ -141,19 +185,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Gorilla(Animal):\n",
-    "    pass"
+    "    def __init__(self, name, weight):\n",
+    "        super().__init__(name, weight)\n",
+    "        self.species='gorilla'\n",
+    "        self.size='Large'\n",
+    "        self.food_type='herbivore'\n",
+    "        self.nocturnal=False"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Using Our Objects\n",
+    "# Using Our Objects\n",
     "\n",
     "Now that we've created classes to model each of the animals in the zoo, we'll write a function that helps us keep track of when to feed different animals.  But, before we can do that, we need to populate our zoo!\n",
     "\n",
@@ -176,12 +225,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
     "def add_animal_to_zoo(zoo, animal_type, name, weight):\n",
-    "    pass"
+    "    animal = None\n",
+    "    if animal_type == \"Gorilla\":\n",
+    "        animal = Gorilla(name, weight)\n",
+    "    elif animal_type == \"Raccoon\":\n",
+    "        animal = Raccoon(name, weight)\n",
+    "    elif animal_type == \"Tiger\":\n",
+    "        animal = Tiger(name, weight)\n",
+    "    else:\n",
+    "        animal = Elephant(name, weight)\n",
+    "    \n",
+    "    zoo.append(animal)\n",
+    "    \n",
+    "    return zoo\n",
+    "    "
    ]
   },
   {
@@ -200,11 +262,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<__main__.Elephant at 0x1ab2daa1ba8>,\n",
+       " <__main__.Elephant at 0x1ab2d9c12b0>,\n",
+       " <__main__.Elephant at 0x1ab2d9c1f98>,\n",
+       " <__main__.Raccoon at 0x1ab2d9c1eb8>,\n",
+       " <__main__.Raccoon at 0x1ab2d9c16d8>,\n",
+       " <__main__.Gorilla at 0x1ab2da9eb38>,\n",
+       " <__main__.Tiger at 0x1ab2da9e940>,\n",
+       " <__main__.Tiger at 0x1ab2da9e898>,\n",
+       " <__main__.Tiger at 0x1ab2da9e828>,\n",
+       " <__main__.Elephant at 0x1ab2daeac50>,\n",
+       " <__main__.Elephant at 0x1ab2daeacc0>,\n",
+       " <__main__.Raccoon at 0x1ab2daead30>,\n",
+       " <__main__.Raccoon at 0x1ab2daead68>,\n",
+       " <__main__.Gorilla at 0x1ab2daeada0>,\n",
+       " <__main__.Tiger at 0x1ab2daeadd8>,\n",
+       " <__main__.Tiger at 0x1ab2daeae10>,\n",
+       " <__main__.Tiger at 0x1ab2daeae48>]"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Create your animals and add them to the 'zoo' in this cell!"
+    "add_animal_to_zoo(zoo, 'Elephant', \"Dumbo\", 100)\n",
+    "add_animal_to_zoo(zoo, 'Elephant', \"Jumbo\", 200)\n",
+    "add_animal_to_zoo(zoo, 'Raccoon', \"Chewy\", 1)\n",
+    "add_animal_to_zoo(zoo, 'Raccoon', \"Cheeky\", 2)\n",
+    "add_animal_to_zoo(zoo, 'Gorilla', \"Babbo\", 500)\n",
+    "add_animal_to_zoo(zoo, 'Tiger', \"Jumpy\", 30)\n",
+    "add_animal_to_zoo(zoo, 'Tiger', \"Lumpy\", 40)\n",
+    "add_animal_to_zoo(zoo, 'Tiger', \"Grumpy\", 50)\n",
+    "    \n",
+    "zoo"
    ]
   },
   {
@@ -226,12 +324,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
     "def feed_animals(zoo, time='Day'):\n",
-    "    pass"
+    "    if time=='Day':\n",
+    "        for i in zoo:\n",
+    "            if i.nocturnal==False and i.food_type==\"carnivore\":\n",
+    "                i.eat(\"meat\")\n",
+    "            elif i.nocturnal==False and i.food_type==\"herbivore\":\n",
+    "                i.eat(\"plants\")\n",
+    "    else:\n",
+    "        for i in zoo:\n",
+    "            if i.nocturnal==True and i.food_type==\"carnivore\":\n",
+    "                i.eat(\"meat\")\n",
+    "            elif i.nocturnal==True and i.food_type==\"herbivore\":\n",
+    "                i.eat(\"plants\")"
    ]
   },
   {
@@ -243,10 +352,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name the elephant thinks plants is yummy!\n",
+      "Dumbo the elephant thinks plants is yummy!\n",
+      "Jumbo the elephant thinks plants is yummy!\n",
+      "Babbo the gorilla thinks plants is yummy!\n",
+      "Dumbo the elephant thinks plants is yummy!\n",
+      "Jumbo the elephant thinks plants is yummy!\n",
+      "Babbo the gorilla thinks plants is yummy!\n"
+     ]
+    }
+   ],
+   "source": [
+    "feed_animals(zoo)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -259,10 +384,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jumpy the tiger thinks meat is yummy!\n",
+      "Lumpy the tiger thinks meat is yummy!\n",
+      "Grumpy the tiger thinks meat is yummy!\n",
+      "Jumpy the tiger thinks meat is yummy!\n",
+      "Lumpy the tiger thinks meat is yummy!\n",
+      "Grumpy the tiger thinks meat is yummy!\n"
+     ]
+    }
+   ],
+   "source": [
+    "feed_animals(zoo,'Night')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -282,9 +422,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -296,7 +436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
